# christmast-concurrency-puzzle

./: .editorconfig  CMakeLists.txt  build.sh  deer-workers.c  deer-workers.h  elf-workers.c  elf-workers.h  global.h  main.c  santa-worker.c  santa-worker.h  vector.c  vector.h
